<resources>
    <string name="app_name">WafflyTime</string>
    <string name="new_thread">New Thread</string>
    <string name="wafflytime">와플리타임</string>
    <string name="seoul_national_university">서울대</string>
    <string name="school_home">학교 홈</string>
    <string name="library_status">열람실\n현황</string>
    <string name="shuttle_bus">셔틀\n버스</string>
    <string name="notifications">학사\n공지</string>
    <string name="schedule">학사\n일정</string>
    <string name="library">도서관</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="formore_toboardlist">더보기</string>
    <string name="my_information">내 정보</string>
    <string name="change_password_button">비밀번호 변경</string>
    <string name="change_email_button">이메일 변경</string>
    <string name="set_nickname_button">닉네임 설정</string>
    <string name="message_time">%1$d:%2$d</string>
</resources>