<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wafflytime_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wafflytime"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_purple"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seoul_national_university_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/seoul_national_university"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wafflytime_name" />

    <Button
        android:id="@+id/button_search"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:drawableTop="@drawable/ic_baseline_search_24"
        android:text=""
        app:iconTint="@color/purple_500"
        app:layout_constraintEnd_toStartOf="@id/button_my_page"
        app:layout_constraintTop_toTopOf="parent"
        app:showAsAction="always" />

    <Button
        android:id="@+id/button_my_page"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:drawableTop="@drawable/ic_baseline_person_24"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showAsAction="always" />


    <LinearLayout
        android:id="@+id/buttons_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seoul_national_university_name">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/school_home"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/library_status"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shuttle_bus"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notifications"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schedule"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/library"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonformore"
        style="@style/Widget.Material3.Button"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#6A6A6A"
        android:text="@string/formore_toboardlist"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
        <!--app:layout_constraintBottom_toTopOf="@id/fragmentContainerView"-->


    <!--
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_marginTop="100sp"
        android:name="com.waffle22.wafflytime.ui.boards.boardlist.BoardListFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_linear_layout"
        tools:layout="@layout/fragment_board_list"/>
        -->

</androidx.constraintlayout.widget.ConstraintLayout>

